[package]
name = "ctr_etc1"
version = "0.1.0"
authors = ["Sloth"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/SinsofSloth/ctr_etc1"
homepage = "https://github.com/SinsofSloth/ctr_etc1"
license = "MIT"
description = "Nintendo ETC1 compression binding for rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.61"
